{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "049e004c-2e76-442d-a9d3-7b1a77e52b99",
            "actions": [
                {
                    "name": "SwordAttack",
                    "type": "Button",
                    "id": "b2ab7041-76a5-462f-8d45-ffe3657adcde",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "5449f89f-c216-40c4-bffc-b208511e406c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MissileLaunch",
                    "type": "Button",
                    "id": "14d4d7c6-99c4-4003-8e50-ef9e856c1eed",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BulletFire",
                    "type": "Button",
                    "id": "cde5de70-1817-4aa8-9662-7c3c480c1b29",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b22b7efc-22c1-4bfb-811b-2708ea2d0b48",
                    "path": "<Keyboard>/#(X)",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SwordAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c488f8d1-822f-4dd7-b2db-cca573bd324d",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87e1487f-a158-4f83-b6e4-cebc9a078f10",
                    "path": "<Keyboard>/#(Q)",
                    "interactions": "Hold(duration=1,pressPoint=0.75),Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "MissileLaunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1da2b80-6192-49db-8869-e0156d8b8503",
                    "path": "<Keyboard>/z",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "BulletFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}